--- a/index.html
+++ b/index.html
@@ -9,18 +9,36 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <nav class="navbar">
         <h1>Weather Dashboard</h1>
-    </header>
-    <aside>
+    </nav>
+    <div>
         <h2>Search for a City</h2>
         <button type="button" id="search">Search</button>
-    </aside>
+    </div>
     <div id="weather-display">
         <h3>Weather goes here!</h3>
     </div>
     <div id="forecast">
         <h3>5 Day Forecast goes here</h3>
+        <div>
+            <h4>Day 1</h4>
+        </div>
+        <div>
+            <h4>Day 2</h4>
+        </div>
+        <div>
+            <h4>Day 3</h4>
+        </div>
+        <div>
+            <h4>Day 3</h4>
+        </div>
+        <div>
+            <h4>Day 4</h4>
+        </div>
+        <div>
+            <h4>Day 5</h4>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
