--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 <body>
     <nav class="navbar">
@@ -14,13 +19,17 @@
     </nav>
     <div>
         <h2>Search for a City</h2>
+        <div class="input-field col s12">
+            <textarea id="search-input" class="materialize-textarea"></textarea>
+            <!-- <label for ="search-input">Check out the weather</label> -->
+        </div>
         <button type="button" id="fetch-button">Search</button>
     </div>
     <div id="weather-display">
         <h3>Weather goes here!</h3>
     </div>
-    <div id="forecast" class="container text-center row align-items-start">
-        <!-- <h3>5 Day Forecast goes here</h3> -->
+    <div id="forecast" class="container text-center">
+        <div class="row align-items-center">
         <div class="col">
             <h4>Day 1</h4>
         </div>
@@ -39,8 +48,9 @@
         <div class="col">
             <h4>Day 5</h4>
         </div>
+        </div>
     </div>
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
