--- a/index.html
+++ b/index.html
@@ -14,40 +14,39 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <nav class="navbar">
-        <h1>Weather Dashboard</h1>
+    <nav class="d-flex justify-content-center">
+            <h1>Weather Dashboard</h1>
     </nav>
-    <div>
+    <div class="weather">
         <h2>Search for a City</h2>
-        <div class="input-field col s12">
+        <div class="input-field hstack gap-3">
             <textarea id="search-input" class="materialize-textarea"></textarea>
             <!-- <label for ="search-input">Check out the weather</label> -->
         </div>
         <button type="button" id="fetch-button">Search</button>
-    </div>
-    <div id="weather-display">
-        <h3>Weather goes here!</h3>
-    </div>
-    <div id="forecast" class="container text-center">
-        <div class="row align-items-center">
-        <div class="col">
-            <h4>Day 1</h4>
+        <div class="text-center p-2" id="weather-display">
+            <h3>Weather goes here!</h3>
         </div>
-        <div class="col">
-            <h4>Day 2</h4>
-        </div>
-        <div class="col">
-            <h4>Day 3</h4>
-        </div>
-        <div class="col">
-            <h4>Day 3</h4>
-        </div>
-        <div class="col">
-            <h4>Day 4</h4>
-        </div>
-        <div class="col">
-            <h4>Day 5</h4>
-        </div>
+        <div id="forecast" class="text-center p-2">
+        <div>
+            <div class="col">
+                <h4>Day 1</h4>
+            </div>
+            <div class="col">
+                <h4>Day 2</h4>
+            </div>
+            <div class="col">
+                <h4>Day 3</h4>
+            </div>
+            <div class="col">
+                <h4>Day 3</h4>
+            </div>
+            <div class="col">
+                <h4>Day 4</h4>
+            </div>
+            <div class="col">
+                <h4>Day 5</h4>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
