--- a/index.html
+++ b/index.html
@@ -4,51 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script
-      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <nav class="d-flex justify-content-center">
-            <h1>Weather Dashboard</h1>
+
+    <nav class="navbar navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="#">Weather Dashboard</a>
+        </div>
     </nav>
-    <div class="weather">
-        <h2>Search for a City</h2>
-        <div class="input-field hstack gap-3">
-            <textarea id="search-input" class="materialize-textarea"></textarea>
-            <!-- <label for ="search-input">Check out the weather</label> -->
+
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="card-title">Search for a City</h2>
+                <div class="input-group mb-3">
+                    <textarea id="search-input" class="form-control" rows="1"></textarea>
+                    <button type="button" class="btn btn-primary" id="fetch-button">Search</button>
+                </div>
+            </div>
         </div>
-        <button type="button" id="fetch-button">Search</button>
-        <div class="text-center p-2" id="weather-display">
-            <h3>Weather goes here!</h3>
+
+        <div class="card mt-3">
+            <div class="card-body">
+                <h3 class="card-title" id="current-weather-display">Current Weather</h3>
+                <div id="weather-display" class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Temperature (°F)</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody id="weather-table-body"></tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-        <div id="forecast" class="text-center p-2">
-        <div>
-            <div class="col">
-                <h4>Day 1</h4>
-            </div>
-            <div class="col">
-                <h4>Day 2</h4>
-            </div>
-            <div class="col">
-                <h4>Day 3</h4>
-            </div>
-            <div class="col">
-                <h4>Day 3</h4>
-            </div>
-            <div class="col">
-                <h4>Day 4</h4>
-            </div>
-            <div class="col">
-                <h4>Day 5</h4>
+
+        <div class="card mt-3">
+            <div class="card-body">
+                <h3 class="card-title">Search History</h3>
+                <ul id="search-history" class="list-group"></ul>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
