html fixes and styling changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar text-body position-relative">
         <div class="container">
-            <a class="navbar-brand" href="#">Weather Dashboard</a>
+            <a class="navbar-brand position-absolute top-50 start-50 text-center fs-2">Weather Dashboard</a>
         </div>
     </nav>
 
