--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,500;0,600;1,100;1,200&family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,700&family=Quicksand:wght@400;600;700&family=Roboto:ital,wght@0,100;0,400;0,700;1,400&family=Titillium+Web:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>Weather Dashboard</title>
 </head>
@@ -13,7 +16,7 @@
 
     <nav class="navbar text-body position-relative">
         <div class="container">
-            <a class="navbar-brand position-absolute top-50 start-50 text-center fs-2">Weather Dashboard</a>
+            <a id ="title" class="navbar-brand position-absolute top-50 start-50 text-center fs-2">Weather Dashboard</a>
         </div>
     </nav>
 
